first commit from remote host

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <main>
-        <h1>Willkommen auf unserer Website!</h1>
-        <p>Dies ist die Startseite. Hier kannst du mit deinem Uniprojekt beginnen.</p>
+        <h1>Willkommen auf meiner Website!</h1>
+        <p>Dies ist die Startseite. Startpunkt für das Projekt Internet-Technologie.</p>
     </main>
 
     <footer>
