--- a/about.html
+++ b/about.html
@@ -3,27 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Über uns</title>
+    <meta name="description" content="Über mich - Portfolio von Maximilian Wagner.">
+
+    <title>Über Mich - Maximilian Wagner</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Startseite</a>
-            <a href="about.html">Über uns</a>
-            <a href="contact.html">Kontakt</a>
-        </nav>
-    </header>
 
-    <main>
-        <h1>Über unser Projekt</h1>
-        <p>Hier kannst du Details über dein Universitätsprojekt, die Ziele und das Team einfügen.</p>
-    </main>
+<header id="header-placeholder" class="main-header"></header>
 
-    <footer>
-        <p>&copy; 2025 Internet-Technologie Projekt</p>
-    </footer>
+<main>
+    <section id="about-page">
+        <div class="section-header">
+            <h2>Über Mich</h2>
+            <p>Detaillierte Informationen über meinen Werdegang und meine Fähigkeiten.</p>
+        </div>
 
-    <script src="js/main.js"></script>
+        <div id="about-content-placeholder"></div>
+    </section>
+</main>
+
+<footer id="footer-placeholder" class="main-footer-content"></footer>
+
+<script src="js/main.js"></script>
+
 </body>
 </html>
