--- a/index.html
+++ b/index.html
@@ -3,27 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <meta name="description" content="Portfolio von [Dein Name], Softwareentwickler und IT-Security-Spezialist.">
+
+    <title>[Dein Name] - Portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Startseite</a>
-            <a href="about.html">Über uns</a>
-            <a href="contact.html">Kontakt</a>
-        </nav>
-    </header>
+<header id="header-placeholder" class="main-header"></header>
 
-    <main>
-        <h1>Willkommen auf meiner Website!</h1>
-        <p>Dies ist die Startseite. Startpunkt für das Projekt Internet-Technologie.</p>
-    </main>
+<main>
+    <section id="hero" class="hero-section">
+        <div class="hero-content">
+            <h1>Softwareentwickler &<br>IT-Security-Spezialist</h1>
+            <p class="subtitle">Willkommen in meinem digitalen Portfolio. Hier präsentiere ich meine Projekte und Kompetenzen.</p>
+            <div class="hero-buttons">
+                <a href="#projects" class="button">Projekte ansehen</a>
+                <a href="certificates.html" class="button-secondary">Meine Zertifikate</a>
+            </div>
+        </div>
+    </section>
 
-    <footer>
-        <p>&copy; 2025 Internet-Technologie Projekt</p>
-    </footer>
+    <section id="about" class="about-section">
+        <div class="section-header">
+            <h2>Über Mich</h2>
+            <p>Detaillierte Informationen über meinen Werdegang und meine Fähigkeiten.</p>
+        </div>
 
-    <script src="js/main.js"></script>
+        <div id="about-content-placeholder"></div>
+    </section>
+
+    <section id="projects" class="projects-section">
+        <div class="section-header">
+            <h2>Projekte</h2>
+            <p>Eine Auswahl meiner bisherigen Arbeiten. Mehr auf meinem GitHub-Profil.</p>
+        </div>
+
+        <div id="projects-grid-placeholder"></div>
+    </section>
+</main>
+
+<footer id="footer-placeholder" class="main-footer-content"></footer>
+
+<script src="js/main.js"></script>
+
 </body>
 </html>
