--- a/index.html
+++ b/index.html
@@ -21,30 +21,45 @@
     <section id="hero" class="hero-section">
         <div class="hero-content">
             <h1>Softwareentwickler &<br>IT-Security-Spezialist</h1>
-            <p class="subtitle">Willkommen in meinem digitalen Portfolio. Hier präsentiere ich meine Projekte und Kompetenzen.</p>
-            <div class="hero-buttons">
-                <a href="#projects" class="button">Projekte ansehen</a>
-                <a href="certificates.html" class="button-secondary">Meine Zertifikate</a>
-            </div>
+            <p class="subtitle">Willkommen in meinem digitalen Portfolio.</p>
         </div>
     </section>
 
     <section id="about" class="about-section">
         <div class="section-header">
             <h2>Über Mich</h2>
-            <p>Detaillierte Informationen über meinen Werdegang und meine Fähigkeiten.</p>
         </div>
-
         <div id="about-content-placeholder"></div>
     </section>
 
-    <section id="projects" class="projects-section">
+    <section id="navigation-cards" class="navigation-section">
         <div class="section-header">
-            <h2>Projekte</h2>
-            <p>Eine Auswahl meiner bisherigen Arbeiten. Mehr auf meinem GitHub-Profil.</p>
+            <h2>Entdecken Sie mehr</h2>
+            <p>Wählen Sie einen Bereich, um mehr über meine Arbeit und Qualifikationen zu erfahren.</p>
         </div>
 
-        <div id="projects-grid-placeholder"></div>
+        <div class="navigation-grid">
+            <a href="projects.html" class="nav-card-link">
+                <article class="nav-card">
+                    <h3>Projekte</h3>
+                    <p>Eine Übersicht meiner technischen Arbeiten und Fallstudien.</p>
+                </article>
+            </a>
+
+            <a href="certificates.html" class="nav-card-link">
+                <article class="nav-card">
+                    <h3>Zertifikate</h3>
+                    <p>Meine erworbenen und angestrebten Qualifikationen im Bereich IT-Sicherheit.</p>
+                </article>
+            </a>
+
+            <a href="contact.html" class="nav-card-link">
+                <article class="nav-card">
+                    <h3>Kontakt</h3>
+                    <p>Nehmen Sie Kontakt auf für Anfragen oder Kooperationen.</p>
+                </article>
+            </a>
+        </div>
     </section>
 </main>
 
