--- a/_header.html
+++ b/_header.html
@@ -2,7 +2,7 @@
     <a href="index.html" class="logo">[Dein Name]</a>
     <ul>
         <li><a href="index.html#about">Über Mich</a></li>
-        <li><a href="index.html#projects">Projekte</a></li>
+        <li><a href="projects.html">Projekte</a></li>
         <li><a href="certificates.html">Zertifikate</a></li>
         <li><a href="contact.html" class="button">Kontakt</a></li>
     </ul>
