--- a/_header.html
+++ b/_header.html
@@ -1,5 +1,5 @@
 <nav class="main-nav">
-    <a href="index.html" class="logo">[Dein Name]</a>
+    <a href="index.html" class="logo">Maximilian Wagner</a>
     <ul>
         <li><a href="index.html#about">Über Mich</a></li>
         <li><a href="projects.html">Projekte</a></li>
