--- a/_about-content.html
+++ b/_about-content.html
@@ -1,12 +1,12 @@
 <div class="about-layout">
     <div class="about-image">
-        <img src="images/profilbild-platzhalter.png" alt="Ein professionelles Bild von Maximilian Wagner">
+        <img src="images/profilbild.jpg" alt="Profilbild von Maximilian">
     </div>
 
     <div class="about-text">
         <div class="content-block">
             <p>
-                Hallo, mein Name ist Maximilian Wagner. Als Student der IT-Sicherheit an der Technischen Hochschule Brandenburg und praktizierender Softwareentwickler bewege ich mich an der spannenden Schnittstelle zwischen Code und Sicherheit. Meine Leidenschaft gilt der Entwicklung robuster, sicherer Systeme und dem Verständnis, wie man diese vor externen Bedrohungen schützt.
+                Hallo, ich bin Maximilian. Als Student der IT-Sicherheit an der Technischen Hochschule Brandenburg und praktizierender Softwareentwickler bewege ich mich an der spannenden Schnittstelle zwischen Code und Sicherheit. Meine Leidenschaft gilt der Entwicklung robuster, sicherer Systeme und dem Verständnis, wie man diese vor externen Bedrohungen schützt.
             </p>
             <p>
                 Dieser Spagat zwischen der kreativen Problemlösung in der Softwareentwicklung und der analytischen, defensiven Denkweise in der IT-Sicherheit ermöglicht mir eine ganzheitliche Sicht auf technologische Produkte.
