--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kontaktseite und Impressum des Portfolios von [Dein Name].">
+    <meta name="description" content="Kontaktseite und Impressum des Portfolios von Maximilian Wagner.">
 
-    <title>Kontakt - [Dein Name]</title>
+    <title>Kontakt - Maximilian Wagner</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
