--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio von [Dein Name], Softwareentwickler und IT-Security-Spezialist.">
+    <meta name="description" content="Portfolio von Maximilian Wagner, Softwareentwickler und IT-Security-Spezialist.">
 
-    <title>[Dein Name] - Portfolio</title>
+    <title>Maximilian Wagner - Portfolio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
