--- a/index.html
+++ b/index.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio von Maximilian Wagner, Softwareentwickler und IT-Security-Spezialist.">
-
     <title>Maximilian Wagner - Portfolio</title>
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- ========== FAVICON CODE START ========== -->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <meta name="msapplication-TileColor" content="#00ddb3">
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#00ddb3">
+    <!-- ========== FAVICON CODE END ========== -->
 </head>
 
 <body>
+<!-- Platzhalter für den Header -->
 <header id="header-placeholder" class="main-header"></header>
 
 <main>
+    <!-- Hero Section -->
     <section id="hero" class="hero-section">
         <div class="hero-content">
             <h1>Softwareentwickler &<br>IT-Security-Spezialist</h1>
@@ -25,6 +48,7 @@
         </div>
     </section>
 
+    <!-- Über Mich Section -->
     <section id="about" class="about-section">
         <div class="section-header">
             <h2>Über Mich</h2>
@@ -32,12 +56,12 @@
         <div id="about-content-placeholder"></div>
     </section>
 
+    <!-- Wegweiser Section -->
     <section id="navigation-cards" class="navigation-section">
         <div class="section-header">
             <h2>Entdecken Sie mehr</h2>
             <p>Wählen Sie einen Bereich, um mehr über meine Arbeit und Qualifikationen zu erfahren.</p>
         </div>
-
         <div class="navigation-grid">
             <a href="projects.html" class="nav-card-link">
                 <article class="nav-card">
@@ -45,14 +69,12 @@
                     <p>Eine Übersicht meiner technischen Arbeiten und Fallstudien.</p>
                 </article>
             </a>
-
             <a href="certificates.html" class="nav-card-link">
                 <article class="nav-card">
                     <h3>Zertifikate</h3>
                     <p>Meine erworbenen und angestrebten Qualifikationen im Bereich IT-Sicherheit.</p>
                 </article>
             </a>
-
             <a href="contact.html" class="nav-card-link">
                 <article class="nav-card">
                     <h3>Kontakt</h3>
@@ -63,8 +85,10 @@
     </section>
 </main>
 
+<!-- Platzhalter für den Footer -->
 <footer id="footer-placeholder" class="main-footer-content"></footer>
 
+<!-- Script, das alle Platzhalter befüllt -->
 <script src="js/main.js"></script>
 
 </body>
