--- a/certificates.html
+++ b/certificates.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Übersicht der IT-Zertifikate von Maximilian Wagner.">
-
     <title>Zertifikate - Maximilian Wagner</title>
 
-
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -39,33 +39,12 @@
 <header id="header-placeholder" class="main-header"></header>
 
 <main>
-    <section id="certificates" class="certificates-section">
-        <div class="section-header">
-            <h2>IT-Zertifikate</h2>
-            <p>Mein Nachweis für kontinuierliche Weiterbildung im Bereich der IT-Sicherheit und -Infrastruktur.</p>
-        </div>
-
-        <h3>Erworben</h3>
-        <div class="certificate-grid">
-            <article class="certificate-card">
-                <h4>CompTIA Security+</h4>
-                <p>Erworben: [Datum]</p>
-            </article>
-            <article class="certificate-card placeholder">
-                <p>Hier kommt dein nächstes Zertifikat hin.</p>
-            </article>
-        </div>
-
-        <h3 class="roadmap-title">Angestrebt (Roadmap)</h3>
-        <div class="certificate-grid">
-            <article class="certificate-card">
-                <h4>[Name des nächsten Zertifikats]</h4>
-                <p>Geplant für: [Zeitraum]</p>
-            </article>
-            <article class="certificate-card placeholder">
-                <p>Dein nächstes Ziel.</p>
-            </article>
-        </div>
+    <section id="certificates-page">
+        <!--
+          This placeholder will be filled by main.js with the content
+          from your _certificates-gallery.html file.
+        -->
+        <div id="certificates-gallery-placeholder"></div>
     </section>
 </main>
 
