--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
     <section id="projects-page">
         <div class="section-header">
             <h2>Projekte</h2>
-            <p>Hier findest du eine Übersicht meiner wichtigsten Arbeiten und Experimente.</p>
+            <p>Hier findest du einige Highlights meiner Arbeiten und Projekte.<br> Für eine komplette Übersicht besuche meine Github Page.</p>
         </div>
 
         <div id="projects-gallery-placeholder"></div>
