--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="projects.html" class="nav-card-link">
                 <article class="nav-card">
                     <h3>Projekte</h3>
-                    <p>Eine Übersicht meiner technischen Arbeiten und Fallstudien.</p>
+                    <p>Eine Auswahl meiner Arbeiten und Projekte.</p>
                 </article>
             </a>
             <a href="certificates.html" class="nav-card-link">
