background, email, hochschullogo

--- a/index.html
+++ b/index.html
@@ -15,99 +15,61 @@
 </head>
 <body>
 
-    <main class="landing-container">
-        <header class="landing-header">
-            <h1>Internet-Technologie</h1>
-            <p class="subtitle">Eine Sammlung der Aufgaben von Maximilian Wagner</p>
-        </header>
+<main class="landing-container">
+    <header class="landing-header">
+        <img src="images/Technische_Hochschule_Brandenburg_Logo.png" alt="Logo der TH Brandenburg" class="university-logo">
 
-        <section class="assignments-grid">
-            <a href="portfolio/index.html" class="assignment-card featured">
-                <div class="card-content">
-                    <span class="card-tag">Projekt</span>
-                    <h3>Digitales Portfolio</h3>
-                    <p>Eine persönliche Portfolio-Webseite zur Vorstellung von Projekten und Kompetenzen.</p>
-                </div>
-            </a>
+        <h1>Internet-Technologie</h1>
+        <p class="subtitle">Eine Sammlung der Aufgaben von Maximilian Wagner</p>
+    </header>
 
-            <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 02</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+    <section class="assignments-list">
 
-            <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 03</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+        <a href="zen_garden/index.html" class="assignment-item">
+            <div class="item-content">
+                <h3>Aufgabe 02: CSS Zen Garden</h3>
+                <p>Eine Demonstration der Mächtigkeit von CSS durch die Gestaltung einer bestehenden HTML-Struktur.</p>
+            </div>
+        </a>
 
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 04</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Aufgabe 03: Thema der Aufgabe</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
 
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 05</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Aufgabe 04: Thema der Aufgabe</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
 
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 06</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Aufgabe 05: Thema der Aufgabe</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
 
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 07</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+        <a href="portfolio/index.html" class="assignment-item featured">
+            <div class="item-content">
+                <h3>Digitales Portfolio</h3>
+                <p>Eine persönliche Webseite zur Vorstellung von Projekten und Kompetenzen.</p>
+            </div>
+            <div class="item-meta">
+                <span class="item-tag">Hauptprojekt</span>
+            </div>
+        </a>
 
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 08</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
+    </section>
 
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 09</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
-
-             <a href="#" class="assignment-card placeholder">
-                <div class="card-content">
-                    <span class="card-tag">Aufgabe 10</span>
-                    <h3>Thema der Aufgabe</h3>
-                    <p>Beschreibung folgt...</p>
-                </div>
-            </a>
-
-        </section>
-
-        <footer class="landing-footer">
-            <p>&copy; 2025 Maximilian Wagner</p>
-        </footer>
-    </main>
+    <footer class="landing-footer">
+        <p>&copy; 2025 Maximilian Wagner</p>
+        <a href="mailto:maximilian.wagner@th-brandenburg.de" class="footer-email">maximilian.wagner@th-brandenburg.de</a>
+    </footer>
+</main>
 
 </body>
 </html>
