--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,15 +6,15 @@
     <meta name="description" content="Portfolio von Maximilian Wagner, Softwareentwickler und IT-Security-Spezialist.">
     <title>Maximilian Wagner - Portfolio</title>
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts einbinden -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
-    <!-- Stylesheet -->
+    <!-- Haupt-Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- ========== FAVICON CODE START ========== -->
+    <!-- Favicons für verschiedene Geräte -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -32,15 +32,15 @@
     <meta name="msapplication-TileColor" content="#00ddb3">
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#00ddb3">
-    <!-- ========== FAVICON CODE END ========== -->
+    <!-- Ende Favicons -->
 </head>
 
 <body>
-<!-- Platzhalter für den Header -->
+<!-- Header wird per JavaScript geladen -->
 <header id="header-placeholder" class="main-header"></header>
 
 <main>
-    <!-- Hero Section -->
+    <!-- Hero-Bereich -->
     <section id="hero" class="hero-section">
         <div class="hero-content">
             <h1>Softwareentwickler &<br>IT-Security-Spezialist</h1>
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <!-- Über Mich Section -->
+    <!-- Über-mich-Bereich -->
     <section id="about" class="about-section">
         <div class="section-header">
             <h2>Über Mich</h2>
@@ -56,7 +56,7 @@
         <div id="about-content-placeholder"></div>
     </section>
 
-    <!-- Wegweiser Section -->
+    <!-- Navigationskarten-Bereich -->
     <section id="navigation-cards" class="navigation-section">
         <div class="section-header">
             <h2>Entdecken Sie mehr</h2>
@@ -85,10 +85,10 @@
     </section>
 </main>
 
-<!-- Platzhalter für den Footer -->
+<!-- Footer wird per JavaScript geladen -->
 <footer id="footer-placeholder" class="main-footer-content"></footer>
 
-<!-- Script, das alle Platzhalter befüllt -->
+<!-- Lädt dynamische Inhalte -->
 <script src="js/main.js"></script>
 
 </body>
