--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 
-<!--  __  __    __        __                           -->
-<!-- |  \/  |   \ \      / /_ _  __ _ _ __   ___ _ __  -->
-<!-- | |\/| |    \ \ /\ / / _` |/ _` | '_ \ / _ \ '__| -->
-<!-- | |  | |_    \ V  V / (_| | (_| | | | |  __/ |    -->
-<!-- |_|  |_(_)    \_/\_/ \__,_|\__, |_| |_|\___|_|    -->
-<!--                            |___/                  -->
+<!-- ASCII-Art: Internet-Technologie Modulübersicht -->
 
 <!DOCTYPE html>
 <html lang="de">
