--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -10,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-    <!-- Stylesheet -->
+    <!-- Haupt-Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- ========== FAVICON CODE START ========== -->
+    <!-- Favicons für verschiedene Geräte -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#00ddb3">
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#00ddb3">
-    <!-- ========== FAVICON CODE END ========== -->
+    <!-- Ende Favicons -->
 </head>
 <body>
 
