update landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- ASCII-Art: Internet-Technologie Modulübersicht -->
+<!-- Internet-Technologie Landing Page -->
 
 <!DOCTYPE html>
 <html lang="de">
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/landing-style.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="portfolio/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
 </head>
 <body>
 
@@ -28,31 +28,71 @@
 
     <section class="assignments-list">
 
-        <a href="zen_garden/index.html" class="assignment-item">
-            <div class="item-content">
-                <h3>Aufgabe 02: CSS Zen Garden</h3>
-                <p>Eine Demonstration der Mächtigkeit von CSS durch die Gestaltung einer bestehenden HTML-Struktur.</p>
-            </div>
-        </a>
-
         <a href="#" class="assignment-item">
             <div class="item-content">
-                <h3>Aufgabe 03: Thema der Aufgabe</h3>
+                <h3>Übung 1</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 2</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 3</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 4</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 5</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 6</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 7</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 8</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 9</h3>
+                <p>Beschreibung folgt...</p>
+            </div>
+        </a>
+        <a href="#" class="assignment-item">
+            <div class="item-content">
+                <h3>Übung 10</h3>
                 <p>Beschreibung folgt...</p>
             </div>
         </a>
 
         <a href="#" class="assignment-item">
             <div class="item-content">
-                <h3>Aufgabe 04: Thema der Aufgabe</h3>
-                <p>Beschreibung folgt...</p>
-            </div>
-        </a>
-
-        <a href="#" class="assignment-item">
-            <div class="item-content">
-                <h3>Aufgabe 05: Thema der Aufgabe</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Semesterbegleitender Test</h3>
+                <p>Erstellung einer thematischen Anmeldeseite mit dem Fokus auf clientseitiger Formular-Validierung mittels HTML5 und JavaScript.</p>
             </div>
         </a>
 
