Aufgaben Markdowns und Folder Structure

--- a/index.html
+++ b/index.html
@@ -28,63 +28,63 @@
 
     <section class="assignments-list">
 
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe01/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 1</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 1: Verbindung zum Webserver</h3>
+                <p>Ein "hello world" HTML-Dokument per FTP auf einen Webserver laden, um die Grundlagen der Veröffentlichung zu erlernen.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe02/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 2</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 2: Webvisitenkarte in HTML</h3>
+                <p>Erstellung einer persönlichen Webvisitenkarte unter alleiniger Verwendung von semantischem HTML, ohne CSS oder JavaScript.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe03/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 3</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 3: Webvisitenkarte mit CSS</h3>
+                <p>Gestaltung der HTML-Webvisitenkarte mit reinem, handgeschriebenem CSS, um eine persönliche und optisch ansprechende Note zu verleihen.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe04/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 4</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 4: Responsive Webvisitenkarte</h3>
+                <p>Umsetzung eines responsiven Designs für die Webvisitenkarte, das sich automatisch an verschiedene Bildschirmgrößen anpasst.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe05/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 5</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 5: Navigationselemente</h3>
+                <p>Integration einer responsiven Navigationsleiste (Burger-Menü) unter Verwendung einer CSS-Library wie Bootstrap.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe06/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 6</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 6: Interaktivität mit JS Teil 1</h3>
+                <p>Einführung von Interaktivität mit JavaScript, um das aktuelle Datum auszulesen und dynamisch auf der Seite anzuzeigen.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe07/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 7</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 7: Projektkonzept</h3>
+                <p>Erstellung eines Konzepts im PDF-Format für die Prüfungsaufgabe, inklusive Zielsetzung, Umfang und Technologieeinsatz.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe08/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 8</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 8: Interaktivität mit JS Teil 2</h3>
+                <p>Erweiterung der Interaktivität durch einen dynamischen Copyright-Hinweis, Event-Listener und eine Lightbox-Bibliothek.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe09/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 9</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 9: Wetterdaten-API</h3>
+                <p>Einbindung aktueller Wetterdaten von einer externen API (OpenWeatherMap) mittels JavaScript und deren Darstellung auf der Seite.</p>
             </div>
         </a>
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Aufgabe10/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Übung 10</h3>
+                <h3>Aufgabe 10</h3>
                 <p>Beschreibung folgt...</p>
             </div>
         </a>
