--- a/Aufgaben/Aufgabe02/index.html
+++ b/Aufgaben/Aufgabe02/index.html
@@ -16,7 +16,7 @@
 
 <h2>Über mich</h2>
 <p>
-    Gebürtiger Ostwestfale und seit 2 Jahren Bewohner des beschaulichen Städchens Wolfenbüttel.<br>
+    Gebürtiger Ostwestfale und seit 2 Jahren Bewohner des beschaulichen Städtchens Wolfenbüttel.<br>
     Als Student der IT-Sicherheit an der Technischen Hochschule Brandenburg und praktizierender Softwareentwickler bewege ich mich an der spannenden Schnittstelle zwischen Code und Sicherheit.
     Meine Leidenschaft gilt der Entwicklung robuster, sicherer Systeme und dem Verständnis, wie man diese vor externen Bedrohungen schützt.
 </p>
