--- a/Aufgaben/Aufgabe02/index.html
+++ b/Aufgaben/Aufgabe02/index.html
@@ -22,7 +22,7 @@
 </p>
 <p>
     Seit diesem Jahr bin ich Teil des Information-Security Teams bei PowerCo.
-    Meine Schwerpunkte sind der Erwerb eines fundierten breiten Wissens in der Cybersecurity,
+    Meine Schwerpunkte sind der Erwerb eines fundierten, breiten Wissens in der Cybersecurity,
     sowie der Aufbau einer Infrastruktur für automatisierte Penetrationstests.
 </p>
 
@@ -32,7 +32,7 @@
     <li>Web-Technologien (HTML, CSS, JavaScript)</li>
     <li>IT-Sicherheit (SIEM, Netzwerkanalyse, Penetrationstests)</li>
     <li>Cloud (Azure, AWS)</li>
-    <li>Betriebssysteme & Systemnahe Programmierung</li>
+    <li>Betriebssysteme &amp; Systemnahe Programmierung</li>
 </ul>
 
 <h2>Lieblingsfächer an der THB</h2>
